@@ -1670,3 +1670,4 @@ Save_fields_as_user_defined_order=
 Parsing_error=
 illegal_backslash_expression=
 Backslash_parsing_error_near=
+Journal_file_not_found=
