@@ -2415,3 +2415,4 @@ Save_fields_as_user_defined_order=Save_fields_as_user_defined_order
 Parsing_error=Parsing_error
 illegal_backslash_expression=illegal_backslash_expression
 Backslash_parsing_error_near=Backslash_parsing_error_near
+Journal_file_not_found=Journal_file_not_found
